Use database time for metrics partition management
Avoids time / timezone issues by calculating dates for metrics partitions in the database, rather than passing dates from Java to the database.

Also detaches partitions concurrently before dropping them, which avoids expensive ACCESS EXCLUSIVE locks.

https://www.postgresql.org/docs/current/sql-altertable.html#SQL-ALTERTABLE-DETACH-PARTITION
Signed-off-by: nscuro <nscuro@protonmail.com>
Signed-off-by: Meha Bhargava <meha.bhargava2@gmail.com>